tests/black_test/program/Error/test_AssertError.tree
# 测试断言指令
assert 1==1
assert 2== 1
